--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,22 @@
 asgiref==3.8.1
+Brotli==1.1.0
+click==8.1.7
+colorama==0.4.6
 Django==5.0.6
 experta==1.9.4
 filelock==3.14.0
 frozendict==2.4.4
 fsspec==2024.5.0
+gunicorn==22.0.0
+h11==0.14.0
+intel-openmp==2021.4.0
 Jinja2==3.1.4
 joblib==1.4.2
 MarkupSafe==2.1.5
+mkl==2021.4.0
 mpmath==1.3.0
 networkx==3.3
 numpy==1.26.4
-nvidia-cublas-cu12==12.1.3.1
-nvidia-cuda-cupti-cu12==12.1.105
-nvidia-cuda-nvrtc-cu12==12.1.105
-nvidia-cuda-runtime-cu12==12.1.105
-nvidia-cudnn-cu12==8.9.2.26
-nvidia-cufft-cu12==11.0.2.54
-nvidia-curand-cu12==10.3.2.106
-nvidia-cusolver-cu12==11.4.5.107
-nvidia-cusparse-cu12==12.1.0.106
-nvidia-nccl-cu12==2.20.5
-nvidia-nvjitlink-cu12==12.5.40
-nvidia-nvtx-cu12==12.1.105
 opt-einsum==3.3.0
 packaging==24.0
 pandas==2.2.2
@@ -38,9 +33,11 @@ six==1.16.0
 sqlparse==0.5.0
 statsmodels==0.14.2
 sympy==1.12.1
+tbb==2021.12.0
 threadpoolctl==3.5.0
 torch==2.3.0
 tqdm==4.66.4
-triton==2.3.0
 typing_extensions==4.12.0
 tzdata==2024.1
+uvicorn==0.30.0
+whitenoise==6.6.0
